[lworld] C2 compilation fails due to infinite loop in PhaseIterGVN::optimize

XMLWordPrintable

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/oracle/valhalla2/open/src/hotspot/share/opto/phaseX.cpp:1158), pid=831626, tid=831639
      # assert(false) failed: infinite loop in PhaseIterGVN::optimize

      Current CompileTask:
      C2: 712 397 % b 4 MainClass::test @ 14 (65 bytes)

      Stack: [0x00007fe974334000,0x00007fe974435000], sp=0x00007fe974430460, free space=1009k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x16dbb11] PhaseIterGVN::optimize()+0x6a1
      V [libjvm.so+0xa7af58] Compile::Optimize()+0x9e8
      V [libjvm.so+0xa7e24f] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x22ef
      V [libjvm.so+0x887408] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1f8
      V [libjvm.so+0xa8dee1] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xc91
      V [libjvm.so+0xa8ec28] CompileBroker::compiler_thread_loop()+0x5a8
      V [libjvm.so+0x199d4e1] JavaThread::thread_main_inner()+0x271
      V [libjvm.so+0x19a5320] Thread::call_run()+0x100
      V [libjvm.so+0x164fd5e] thread_native_entry(Thread*)+0x10e

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: