8265973: [lworld] C2 compilation fails due to infinite loop in PhaseIterGVN::optimize